# ideas

./: CHANGES.md  LICENSE  README.md  ideas.cabal  stack.yaml
.github/workflows/: ci.yml
aggregate/: Aggregate.hs
countable/: Countable.hs
src/: Async.hs  Components.hs  Countable.hs  Early.hs  GraphSearch.hs  Lem.hs  Metamorphisms.hs  Moore.hs  Nested.hs  SelectiveZero.hs  Task.hs
