name:          ideas
version:       0.0.1
synopsis:      Just a playground
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2020
homepage:      https://github.com/snowleopard/ideas
category:      Ideas
build-type:    Simple
cabal-version: >=1.18
tested-with:   GHC==8.4.4
stability:     experimental
description:   Just a playground

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/ideas.git

library
    hs-source-dirs:     aggregate
                        lem
    exposed-modules:    Aggregate
                        Lem
    build-depends:      base >= 4.7 && < 5
    default-language:   Haskell2010
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
