name:          ideas
version:       0.0.1
synopsis:      Just a playground
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2020
license:       MIT
license-file:  LICENSE
homepage:      https://github.com/snowleopard/ideas
bug-reports:   https://github.com/snowleopard/ideas/issues
category:      Ideas
build-type:    Simple
cabal-version: >=1.18
tested-with:   GHC==8.10
description:   Just a playground for experimenting with some random ideas

extra-doc-files:
    CHANGES.md
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/ideas.git

library
    hs-source-dirs:     src
    exposed-modules:    Countable
                        Lem
                        SelectiveZero
    build-depends:      base >= 4.7 && < 5
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
