name:          ideas
version:       0.0.1
synopsis:      Just a playground
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2020-2023
license:       MIT
license-file:  LICENSE
homepage:      https://github.com/snowleopard/ideas
bug-reports:   https://github.com/snowleopard/ideas/issues
category:      Ideas
build-type:    Simple
cabal-version: 1.18
tested-with:   GHC==9.6.1, GHC==9.4.4, GHC==9.2.7, GHC==9.0.2, GHC==8.10.7
description:   Just a playground for experimenting with some random ideas

extra-doc-files:
    CHANGES.md
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/ideas.git

library
    hs-source-dirs:     src
    exposed-modules:    Async
                        Components
                        Countable
                        Early
                        GraphSearch
                        Lem
                        Metamorphisms
                        SelectiveZero
    build-depends:      algebraic-graphs >= 0.5     && < 0.7,
                        base             >= 4.7     && < 5,
                        containers       >= 0.5.5.1 && < 0.8,
                        extra            >= 1.7.8   && < 1.8,
                        mtl              >= 2.2     && < 2.3,
                        selective        >= 5.0     && < 6.0

    default-language:   Haskell2010
    ghc-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
    if impl(ghc >= 9.2)
        ghc-options:    -Wno-operator-whitespace-ext-conflict
